--- a/index.html
+++ b/index.html
@@ -4,12 +4,35 @@
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <style> body {padding: 0; margin: 0;} </style>
-    <script src="p5.min.js"></script>
-    <script src="p5.sound.min.js"></script>
-    <script src="p5.geolocation.js"></script>
+    <script src="addons/p5.min.js"></script>
+    <script src="addons/p5.sound.min.js"></script>
+    <script src="addons/p5.geolocation.js"></script>
+    <script src="addons/p5.dom.min.js"></script>
     <script src="https://unpkg.com/mappa-mundi/dist/mappa.js" type="text/javascript"></script>
 
     <script src="sketch.js"></script>
+
+    <style media="screen">
+      button {
+        font: serif;
+        font-size: 12px;
+        font-weight: bold;
+        background-color: white;
+        border: solid 2px black;
+        padding: 5px;
+        transition: 0.2s;
+      }
+
+      button:hover {
+        font: serif;
+        font-size: 12px;
+        font-weight: bold;
+        background-color: white;
+        border: solid 2px red;
+        padding: 5px;
+        transition: 0.2s;
+      }
+    </style>
   </head>
   <body>
   </body>
