--- a/index.html
+++ b/index.html
@@ -4,36 +4,54 @@
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <style> body {padding: 0; margin: 0;} </style>
+    <link href="https://fonts.googleapis.com/css?family=Teko:300,400,600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Maven+Pro:500&display=swap" rel="stylesheet">
     <script src="addons/p5.min.js"></script>
-    <script src="addons/p5.sound.min.js"></script>
     <script src="addons/p5.geolocation.js"></script>
-    <script src="addons/p5.dom.min.js"></script>
     <script src="https://unpkg.com/mappa-mundi/dist/mappa.js" type="text/javascript"></script>
-
     <script src="sketch.js"></script>
-
     <style media="screen">
-      button {
-        font: serif;
-        font-size: 12px;
-        font-weight: bold;
-        background-color: white;
-        border: solid 2px black;
-        padding: 5px;
-        transition: 0.2s;
+      #box {
+        position: absolute;
+        left: 2%;
+        top: 20%;
+        background: rgba(0, 0, 0,0.7);
+        border: 2px solid rgba(198, 255, 140,1);
+        border-radius: 5px;
+        color: rgb(198, 255, 140);
+        font-family: 'Teko', sans-serif;
+        font-weight: 300;
+        font-size: 21px;
+        width: 18%;
+        height: 70%;
+        padding: 1%;
+        line-height: 29px;
+        display: none;
+
+      }
+      img {
+        width: 35px;
+        height: 35px;
+        position: absolute;
+        left: 2%;
+        top: 3%;
+        cursor: pointer;
       }
 
-      button:hover {
-        font: serif;
-        font-size: 12px;
-        font-weight: bold;
-        background-color: white;
-        border: solid 2px red;
-        padding: 5px;
-        transition: 0.2s;
-      }
+    #close {
+      position: absolute;
+      left: 105%;
+      top: -5%;
+      cursor: pointer;
+      font-family: 'Maven Pro', sans-serif;
+      font-size: 30px;
+    }
     </style>
   </head>
   <body>
+    <div id="container"></div>
+    <div id="box"><span id="close">x</span></div>
+
+    <img src="assets/tips.png" id="tips">
   </body>
 </html>
